@@ -28,7 +28,7 @@ package org.omegat.filters;
 import static org.junit.Assert.assertEquals;
 
 import java.io.File;
-import java.net.URL;
+import java.net.URI;
 import java.util.List;
 
 import org.junit.Test;
@@ -50,8 +50,8 @@ public class OpenXMLFilterTest extends TestFilterBase {
         translate(new OpenXMLFilter(), in.getPath());
 
         for (String f : new String[] { "word/document.xml" }) {
-            compareXML(new URL("jar:file:" + in.getAbsolutePath() + "!/" + f),
-                    new URL("jar:file:" + outFile.getAbsolutePath() + "!/" + f));
+            compareXML(new URI("jar", in.toURI() + "!/" + f, null).toURL(),
+                    new URI("jar", outFile.toURI() + "!/" + f, null).toURL());
         }
     }
 
